--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Devashish Bakare",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "mongoose": "^6.8.3"
   }
 }
