--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.17.3",
     "mongoose": "^6.8.3",
     "mongoose-auto-increment": "^5.0.1",
+    "nodemailer": "^6.9.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   }
